compiler/syntax/tests/parsing/errors/scanner/escapeSequence.res
let x = "\055"

let x = "\123"
